--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
         android:theme="@style/Theme.CalculatorTD2">
 
         <activity
-            android:name=".ResultActivity"
+            android:name=".activities.ResultActivity"
             android:exported="true" />
 
         <activity
-            android:name=".ComputeActivity"
+            android:name=".activities.ComputeActivity"
             android:exported="true" >
 
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
 
             <intent-filter>
